project(opensp)

set (VERSION_MAJOR 1)
set (VERSION_MINOR 5)
set (VERSION_PATH 2)

cmake_minimum_required(VERSION 2.6)

include_directories(
    include
    generic
)

set (SRC_SOURCES
    "lib/Allocator.cxx"
    "lib/app_inst.cxx"
    "lib/arc_inst.cxx"
    "lib/ArcEngine.cxx"
    "lib/assert.cxx"
    "lib/Attribute.cxx"
    "lib/Big5CodingSystem.cxx"
    "lib/CharsetDecl.cxx"
    "lib/CharsetInfo.cxx"
    "lib/CharsetRegistry.cxx"
    "lib/CmdLineApp.cxx"
    "lib/CodingSystem.cxx"
    "lib/CodingSystemKit.cxx"
    "lib/ConsoleOutput.cxx"
    "lib/ContentState.cxx"
    "lib/ContentToken.cxx"
    "lib/DescriptorManager.cxx"
    "lib/Dtd.cxx"
    "lib/ElementType.cxx"
    "lib/Entity.cxx"
    "lib/EntityApp.cxx"
    "lib/EntityCatalog.cxx"
    "lib/EntityDecl.cxx"
    "lib/EntityManager.cxx"
    "lib/entmgr_inst.cxx"
    "lib/ErrnoMessageArg.cxx"
    "lib/ErrorCountEventHandler.cxx"
    "lib/EUCJPCodingSystem.cxx"
    "lib/Event.cxx"
    "lib/EventGenerator.cxx"
    "lib/ExtendEntityManager.cxx"
    "lib/ExternalId.cxx"
    "lib/Fixed2CodingSystem.cxx"
    "lib/GenericEventHandler.cxx"
    "lib/Group.cxx"
    "lib/Hash.cxx"
    "lib/Id.cxx"
    "lib/IdentityCodingSystem.cxx"
    "lib/IListBase.cxx"
    "lib/InputSource.cxx"
    "lib/InternalInputSource.cxx"
#    "lib/lib.res"
    "lib/Link.cxx"
    "lib/LinkProcess.cxx"
    "lib/LiteralStorage.cxx"
    "lib/Location.cxx"
    "lib/Lpd.cxx"
    "lib/Markup.cxx"
    "lib/Message.cxx"
    "lib/MessageArg.cxx"
    "lib/MessageEventHandler.cxx"
    "lib/MessageFormatter.cxx"
    "lib/MessageReporter.cxx"
    "lib/MessageTable.cxx"
    "lib/ModeInfo.cxx"
    "lib/Notation.cxx"
    "lib/NotationStorage.cxx"
    "lib/NumericCharRefOrigin.cxx"
    "lib/OffsetOrderedList.cxx"
    "lib/OpenElement.cxx"
    "lib/OutputByteStream.cxx"
    "lib/OutputCharStream.cxx"
    "lib/OutputState.cxx"
    "lib/Param.cxx"
    "lib/parseAttribute.cxx"
    "lib/parseCommon.cxx"
    "lib/parseDecl.cxx"
    "lib/parseInstance.cxx"
    "lib/parseMode.cxx"
    "lib/parseParam.cxx"
    "lib/Parser.cxx"
    "lib/parser_inst.cxx"
    "lib/ParserApp.cxx"
    "lib/ParserEventGeneratorKit.cxx"
    "lib/ParserMessages.cxx"
    "lib/ParserOptions.cxx"
    "lib/ParserState.cxx"
    "lib/parseSd.cxx"
    "lib/Partition.cxx"
    "lib/PosixStorage.cxx"
    "lib/Recognizer.cxx"
    "lib/RewindStorageObject.cxx"
    "lib/Sd.cxx"
    "lib/SdText.cxx"
    "lib/SearchResultMessageArg.cxx"
    "lib/SGMLApplication.cxx"
    "lib/SgmlParser.cxx"
    "lib/ShortReferenceMap.cxx"
    "lib/SJISCodingSystem.cxx"
    "lib/SOEntityCatalog.cxx"
    "lib/splib.cxx"
    "lib/StdioStorage.cxx"
    "lib/StorageManager.cxx"
    "lib/SubstTable.cxx"
    "lib/Syntax.cxx"
    "lib/Text.cxx"
    "lib/TokenMessageArg.cxx"
    "lib/TranslateCodingSystem.cxx"
    "lib/TrieBuilder.cxx"
    "lib/TypeId.cxx"
    "lib/Undo.cxx"
    "lib/UnicodeCodingSystem.cxx"
    "lib/UnivCharsetDesc.cxx"
    "lib/URLStorage.cxx"
    "lib/UTF8CodingSystem.cxx"
    "lib/Win32CodingSystem.cxx"
    "lib/WinApp.cxx"
    "lib/WinInetStorage.cxx"
    "lib/xentmgr_inst.cxx"
    "lib/XMLCodingSystem.cxx"
)

set (libopensp_HEADERS
    generic/EventGenerator.h
    generic/ParserEventGeneratorKit.h
    generic/SGMLApplication.h
    include/Allocator.h
    include/ArcEngine.h
    include/Attribute.h
    include/Attributed.h
    include/Big5CodingSystem.h
    include/Boolean.h
    include/CharMap.h
    include/CharsetDecl.h
    include/CharsetInfo.h
    include/CharsetRegistry.h
    include/CmdLineApp.h
    include/CodingSystem.h
    include/CodingSystemKit.h
    include/config.h
    include/ConsoleOutput.h
    include/constant.h
    include/ContentState.h
    include/ContentToken.h
    include/CopyOwner.h
    include/DescriptorManager.h
    include/Dtd.h
    include/ElementType.h
    include/Entity.h
    include/EntityApp.h
    include/EntityCatalog.h
    include/EntityDecl.h
    include/EntityManager.h
    include/ErrnoMessageArg.h
    include/ErrorCountEventHandler.h
    include/EUCJPCodingSystem.h
    include/Event.h
    include/EventsWanted.h
    include/ExtendEntityManager.h
    include/ExternalId.h
    include/Fixed2CodingSystem.h
    include/Fixed4CodingSystem.h
    include/GenericEventHandler.h
    include/Hash.h
    include/HashTable.h
    include/HashTableItemBase.h
    include/IdentityCodingSystem.h
    include/IList.h
    include/IListBase.h
    include/IListIter.h
    include/IListIterBase.h
    include/InputSource.h
    include/InternalInputSource.h
    include/IQueue.h
    include/ISet.h
    include/ISetIter.h
    include/Link.h
    include/LinkProcess.h
    include/List.h
    include/ListIter.h
    include/LiteralStorage.h
    include/Location.h
    include/Lpd.h
    include/macros.h
    include/Markup.h
    include/Message.h
    include/MessageArg.h
    include/MessageBuilder.h
    include/MessageEventHandler.h
    include/MessageFormatter.h
    include/MessageModule.h
    include/MessageReporter.h
    include/MessageTable.h
    include/Mode.h
    include/Named.h
    include/NamedResource.h
    include/NamedResourceTable.h
    include/NamedTable.h
    include/NCVector.h
    include/Notation.h
    include/NotationStorage.h
    include/OpenElement.h
    include/Options.h
    include/OutputByteStream.h
    include/OutputCharStream.h
    include/Owner.h
    include/OwnerTable.h
    include/ParserApp.h
    include/ParserOptions.h
    include/PointerTable.h
    include/PosixStorage.h
    include/Ptr.h
    include/RangeMap.h
    include/Resource.h
    include/RewindStorageObject.h
    include/rtti.h
    include/Sd.h
    include/SdText.h
    include/SearchResultMessageArg.h
    include/SgmlParser.h
    include/ShortReferenceMap.h
    include/SJISCodingSystem.h
    include/SOEntityCatalog.h
    include/sptchar.h
    include/StdioStorage.h
    include/StorageManager.h
    include/StringC.h
    include/StringOf.h
    include/StringResource.h
    include/SubstTable.h
    include/Syntax.h
    include/Text.h
    include/TranslateCodingSystem.h
    include/TypeId.h
    include/types.h
    include/UnicodeCodingSystem.h
    include/UnivCharsetDesc.h
    include/URLStorage.h
    include/UTF16CodingSystem.h
    include/UTF8CodingSystem.h
    include/Vector.h
    include/Win32CodingSystem.h
    include/WinApp.h
    include/WinInetStorage.h
    include/XcharMap.h
    include/XMLCodingSystem.h
    include/xnew.h
)

add_library(opensp SHARED ${SRC_SOURCES})
set_target_properties(opensp PROPERTIES OUTPUT_NAME "sp133")
target_link_libraries(opensp)

install(TARGETS opensp RUNTIME DESTINATION bin ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
install(FILES ${libopensp_HEADERS} DESTINATION include/opensp)

